added shadow to the text

--- a/SCSS/index.scss
+++ b/SCSS/index.scss
@@ -15,6 +15,7 @@ body{
 }
 
 .welcome-heading{
+    text-shadow: -8px 8px 0 #245238;
     font-size: 4rem;
     display: flex;
     justify-content: center;
